Added code for access key from Key vault using azure app configuration

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,4 +11,7 @@
     }
 </style>
 
-<h1>@Configuration["TestApp:Settings:Message"]</h1>
+<h1>
+    @Configuration["TestApp:Settings:Message"]
+    and @Configuration["TestApp:Settings:KeyVaultMessage"]
+</h1>
